--- a/index.html
+++ b/index.html
@@ -315,6 +315,62 @@ function stopPlayTimer(){
        style="display:inline-block; text-decoration:none; background:#ffb347; color:#fff; padding:12px 16px; border-radius:14px; font-size:16px;">
       ▶️ もっと！はむチラ長屋ch.
     </a>
+    <!-- ▼シェア＆アイコン（ytLinkの直後に追加） -->
+<div id="shareArea" style="margin-top:12px; text-align:center;">
+  <a id="shareX" href="#" target="_blank"
+     style="margin:0 6px; text-decoration:none; font-size:14px; padding:6px 10px; border-radius:6px; background:#000; color:#fff;">
+    Xでシェア
+  </a>
+
+  <a id="shareLine" href="#" target="_blank"
+     style="margin:0 6px; text-decoration:none; font-size:14px; padding:6px 10px; border-radius:6px; background:#06c755; color:#fff;">
+    LINEでシェア
+  </a>
+
+  <button id="copyUrlBtn"
+     style="margin:0 6px; font-size:14px; padding:6px 10px; border-radius:6px; background:#888; color:#fff; border:none; cursor:pointer;">
+    URLコピー
+  </button>
+
+  <div style="margin-top:12px;">
+    <img src="assets/icon-192.png" alt="アプリアイコン" width="64" height="64" style="border-radius:12px;">
+  </div>
+</div>
+<!-- ▲ここまで -->
+
+    <script>
+document.addEventListener('DOMContentLoaded', () => {
+  const url   = location.href;
+  const title = document.title;
+
+  // Xシェア
+  const xBtn = document.getElementById('shareX');
+  if (xBtn) {
+    xBtn.href = `https://x.com/intent/tweet?url=${encodeURIComponent(url)}&text=${encodeURIComponent(title)}`;
+  }
+
+  // LINEシェア
+  const lineBtn = document.getElementById('shareLine');
+  if (lineBtn) {
+    lineBtn.href = `https://line.me/R/msg/text/?${encodeURIComponent(title + " " + url)}`;
+  }
+
+  // URLコピー
+  const copyBtn = document.getElementById('copyUrlBtn');
+  if (copyBtn) {
+    copyBtn.addEventListener('click', async () => {
+      try {
+        await navigator.clipboard.writeText(url);
+        copyBtn.textContent = "コピーしました！";
+        setTimeout(() => copyBtn.textContent = "URLコピー", 2000);
+      } catch (e) {
+        alert("コピーに失敗しました: " + e);
+      }
+    });
+  }
+});
+</script>
+
   </div>
 </div>
     </div>
@@ -3258,6 +3314,38 @@ document.addEventListener('DOMContentLoaded', () => {
       } else {
         // そもそもダイアログが出せない環境 → 案内UI
         showInstallUI(false);
+      }
+    });
+  }
+});
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const url   = location.href;
+  const title = document.title;
+
+  // Xシェア
+  const xBtn = document.getElementById('shareX');
+  if (xBtn) {
+    xBtn.href = `https://x.com/intent/tweet?url=${encodeURIComponent(url)}&text=${encodeURIComponent(title)}`;
+  }
+
+  // LINEシェア
+  const lineBtn = document.getElementById('shareLine');
+  if (lineBtn) {
+    lineBtn.href = `https://line.me/R/msg/text/?${encodeURIComponent(title + " " + url)}`;
+  }
+
+  // URLコピー
+  const copyBtn = document.getElementById('copyUrlBtn');
+  if (copyBtn) {
+    copyBtn.addEventListener('click', async () => {
+      try {
+        await navigator.clipboard.writeText(url);
+        copyBtn.textContent = "コピーしました！";
+        setTimeout(() => copyBtn.textContent = "URLコピー", 2000);
+      } catch (e) {
+        alert("コピーに失敗しました: " + e);
       }
     });
   }
