--- a/index.html
+++ b/index.html
@@ -3321,19 +3321,23 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  const url   = location.href;
-  const title = document.title;
+  const url = location.href;
+
+  // ★ ここを固定文にする
+  const shareText = `🐹はむころりん
+ハムスターをころころして大きくするゲーム、ぜひ遊んでみてね！
+#はむころりん #はむチラ #ハムスター`;
 
   // Xシェア
   const xBtn = document.getElementById('shareX');
   if (xBtn) {
-    xBtn.href = `https://x.com/intent/tweet?url=${encodeURIComponent(url)}&text=${encodeURIComponent(title)}`;
+    xBtn.href = `https://x.com/intent/tweet?url=${encodeURIComponent(url)}&text=${encodeURIComponent(shareText)}`;
   }
 
   // LINEシェア
   const lineBtn = document.getElementById('shareLine');
   if (lineBtn) {
-    lineBtn.href = `https://line.me/R/msg/text/?${encodeURIComponent(title + " " + url)}`;
+    lineBtn.href = `https://line.me/R/msg/text/?${encodeURIComponent(shareText + "\\n" + url)}`;
   }
 
   // URLコピー
@@ -3350,6 +3354,7 @@ document.addEventListener('DOMContentLoaded', () => {
     });
   }
 });
+
 </script>
 
   
